--- a/_includes/gbrun.html
+++ b/_includes/gbrun.html
@@ -19,38 +19,39 @@
 
 <body>
     <div class="background"></div>
-    <div class="main">
-        <div class="main-center">
-            <div class="main-wrapper">
+    <div class="main"><br>
+        <button title="Load the requested game from the server into the emulator." style="display: block; margin: 0 auto; padding: 10px 20px; font-size: 16px; font-weight: bold; text-align: center; text-decoration: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s ease; color: #fff; background-color: #007bff; border: none;"
+            onmouseover="this.style.backgroundColor='#0056b3';" onmouseout="this.style.backgroundColor='#007bff';" onclick="simulateFileInput('./game.gb')" ">
+Load game
+</button>
+        <div class="main-center ">
+            <div class="main-wrapper ">
                 <jsgbc-ui loading>
-                    <h1 slot="loading">Loading...</h1>
-                    <canvas class="pixelated" slot="lcd"></canvas>
+                    <h1 slot="loading ">Loading...</h1>
+                    <canvas class="pixelated " slot="lcd "></canvas>
                 </jsgbc-ui>
 
-                <div class="file-button-bar">
-                    <file-button style="display:none!important" id="insert-cartridge">
-                        <div class="text">Insert Cartridge</div>
-                        <i class="far fa-caret-square-down fa-3x"></i>
-                        <input id="fileInput" type="file" accept=".gb,.gbc,.zip" />
+                <div class="file-button-bar ">
+                    <file-button style="display:none!important " id="insert-cartridge ">
+                        <div class="text ">Insert Cartridge</div>
+                        <i class="far fa-caret-square-down fa-3x "></i>
+                        <input id="fileInput " type="file " accept=".gb,.gbc,.zip " />
                     </file-button>
 
-                    <file-button id="download-save" class="disabled">
-                        <div class="text">Download Save</div>
-                        <i class="far fa-arrow-alt-circle-down fa-3x"></i>
+                    <file-button id="download-save " class="disabled ">
+                        <div class="text ">Download Save</div>
+                        <i class="far fa-arrow-alt-circle-down fa-3x "></i>
                     </file-button>
 
-                    <file-button id="upload-save" class="disabled">
-                        <div class="text">Upload Save</div>
-                        <i class="far fa-arrow-alt-circle-up fa-3x"></i>
-                        <input type="file" accept=".sav" />
+                    <file-button id="upload-save " class="disabled ">
+                        <div class="text ">Upload Save</div>
+                        <i class="far fa-arrow-alt-circle-up fa-3x "></i>
+                        <input type="file " accept=".sav " />
                     </file-button>
                 </div>
             </div>
         </div>
-        <button title="Load the requested game from the server into the emulator." style="display: block; margin: 0 auto; padding: 10px 20px; font-size: 16px; font-weight: bold; text-align: center; text-decoration: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s ease; color: #fff; background-color: #007bff; border: none;"
-            onmouseover="this.style.backgroundColor='#0056b3';" onmouseout="this.style.backgroundColor='#007bff';" onclick="simulateFileInput('./game.gb')" ">
-  Load game
-</button>
+
     </div>
 
     <script>
