--- a/_includes/gbrun.html
+++ b/_includes/gbrun.html
@@ -15,6 +15,8 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="/bower_components/jsgbc-ui/jsgbc-ui.html" />
+
+    {% include gtag.html %}
 </head>
 
 <body>
