--- a/styles/index.css
+++ b/styles/index.css
@@ -122,3 +122,36 @@ file-button.disabled input[type="file"] {
         padding: 0;
     }
 }
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.65); 
+    z-index: 9999;
+    display: none;
+  }
+
+  #overlay.visible {
+    display: block;
+  }
+
+  .overlay-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  #closeOverlayBtn {
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #000;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+  .loadbutton{display: block; margin: 0 auto; padding: 10px 20px; font-size: 16px; font-weight: bold; text-align: center; text-decoration: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s ease; color: #fff; background-color: #007bff; border: none;}
