Adding sitemap + GTAG; cleaning up

--- a/_includes/gbrun.html
+++ b/_includes/gbrun.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="/bower_components/jsgbc-ui/jsgbc-ui.html" />
+
+    {% include gtag.html %}
 </head>
 
 <body>
